--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -37,7 +37,7 @@ fr:
   Service was successfully destroyed: Prestation supprimée
 
   Customer was successfully created: Client ajouté
-  Customer was successfully updated: Client mise à jour
+  Customer was successfully updated: Client mis à jour
   Customer was successfully destroyed: Client supprimé
 
   Create: Valider
