--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -15,6 +15,7 @@ fr:
   Margin: Marge
   Unit price: Prix unitaire
   Gross cost: Total HT
+  Total gross: Total HT
   Provider name: Fournisseur
   Bought price: Prix payé
   Provider invoice: Facture fournisseur
