--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -450,3 +450,10 @@ fr:
   none: "aucun"
   wares_to_invoice: "Marchandises à facturer"
   projects_done: "Projets terminés"
+  extras: "Divers"
+  extra: "Divers"
+  unit: "Unité"
+  quantity: "Quantité"
+  extra_price: "Prix/Unité"
+  editing_extra: "Modification divers"
+  creating_extra: "Création divers"
