--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,13 +1,13 @@
 fr:
   id_locale: ID
-  date_locale: date
+  date_locale: Date
 
-  ware: marchandise
-  project: projet
-  invoice: facture
-  customer: client
-  quotation: devis
-  service: "prestation"
+  ware: Marchandise
+  project: Projet
+  invoice: Facture
+  customer: Client
+  quotation: Devis
+  service: Prestation
 
   project_title: Titre projet
   Name: Nom
@@ -21,7 +21,7 @@ fr:
   sell_price: Prix
   margin: Marge
   unit_price: Prix unitaire
-  gross_cost: "Total HT"
+  gross_cost: Total HT
   total_gross: Total HT
   provider_name: Fournisseur
 
@@ -29,12 +29,9 @@ fr:
   coefficient: Coefficent
   duration: Durée
   status: Statut
-  tva_rate: "Taux TVA"
+  tva_rate: Taux TVA
   total_cost: Coût total
 
-  wielding: Soudure
-  machining: Usinage
-  karcher: Karcher
   description: Description
 
   mail: Email
@@ -48,46 +45,46 @@ fr:
   from: Depuis
   to: À
 
-  all_projects: "Tous les projets"
-  all_customers: "Tous les clients"
-  all_status: "Tous les statuts"
+  all_projects: Tous les projets
+  all_customers: Tous les clients
+  all_status: Tous les statuts
 
-  ware_add_success: "Marchandise ajoutée"
-  ware_update_success: "Marchandise mise à jour"
-  ware_destroy_success: "Marchandise supprimée"
-  ware_already_invoiced: "Cette marchandise est déjà facturée, continuer ?"
-  ware_ready_invoiced: "Cette marchandise est prête à être facturée, continuer ?"
+  ware_add_success: Marchandise ajoutée
+  ware_update_success: Marchandise mise à jour
+  ware_destroy_success: Marchandise supprimée
+  ware_already_invoiced: Cette marchandise est déjà facturée, continuer ?
+  ware_ready_invoiced: Cette marchandise est prête à être facturée, continuer ?
 
   service_add_success: Prestation ajoutée
   service_update_success: Prestation mise à jour
   service_destroy_success: Prestation supprimée
-  service_already_invoiced: "Cette prestation est déjà facturée, continuer ?"
+  service_already_invoiced: Cette prestation est déjà facturée, continuer ?
 
-  customer_add_success: "Client ajouté"
-  customer_update_success: "Client mis à jour"
-  customer_detroy_success: "Client supprimé"
-  all_customer_names: "Tous les noms"
-  all_customer_localities: "Toutes les localités"
+  customer_add_success: Client ajouté
+  customer_update_success: Client mis à jour
+  customer_detroy_success: Client supprimé
+  all_customer_names: Tous les noms
+  all_customer_localities: Toutes les localités
 
-  project_add_success: "Projet ajouté"
-  project_update_success: "Projet mis à jour"
-  project_destroy_success: "Projet supprimé"
-  project_already_invoiced: "Ce projet est déjà facturé, continuer ?"
-  project_ready_invoiced: "Ce projet est prêt à être facturé, continuer ?"
+  project_add_success: Projet ajouté
+  project_update_success: Projet mis à jour
+  project_destroy_success: Projet supprimé
+  project_already_invoiced: Ce projet est déjà facturé, continuer ?
+  project_ready_invoiced: Ce projet est prêt à être facturé, continuer ?
 
-  project_extra_line_add_success: "Divers ajouté au projet"
-  project_extra_line_update_success: "Divers mis à jour dans le projet"
-  project_extra_line_delete_success: "Divers supprimé du projet"
+  project_extra_line_add_success: Divers ajouté au projet
+  project_extra_line_update_success: Divers mis à jour dans le projet
+  project_extra_line_delete_success: Divers supprimé du projet
 
-  extra_add_success: "Divers ajouté"
-  extra_update_success: "Divers mis à jour"
-  extra_delete_success: "Divers supprimé"
+  extra_add_success: Divers ajouté
+  extra_update_success: Divers mis à jour
+  extra_delete_success: Divers supprimé
 
   create: Valider
   will_paginate:
-    previous_label: "Précedent"
-    next_label: "Suivant"
-    page_gap: "&hellip;"
+    previous_label: Précedent
+    next_label: Suivant
+    page_gap: '&hellip;'
   activerecord:
     attributes:
       user:
@@ -127,65 +124,15 @@ fr:
               blank: 'Le mot de passe ne peut pas être vide.'
   devise:
     confirmations:
-      confirmed: Votre compte a bien été confirmé.
-      new:
-        resend_confirmation_instructions: Renvoyer les instructions de confirmation
-      send_instructions: Vous allez recevoir sous quelques minutes un courriel comportant des instructions pour confirmer votre compte.
-      send_paranoid_instructions: Si votre courriel existe sur notre base de données, vous recevrez sous quelques minutes un message avec des instructions pour confirmer votre compte.
     failure:
-      already_authenticated: Vous êtes déjà connecté(e).
       inactive: Votre compte n’est pas encore activé.
-      invalid: "%{authentication_keys} ou mot de passe incorrect."
+      invalid: '%{authentication_keys} ou mot de passe incorrect.'
       last_attempt: Il vous reste une chance avant que votre compte soit bloqué.
       locked: Votre compte est verrouillé.
-      not_found_in_database: "%{authentication_keys} ou mot de passe incorrect."
+      not_found_in_database: '%{authentication_keys} ou mot de passe incorrect.'
       timeout: Votre session est expirée, veuillez vous reconnecter pour continuer.
       unauthenticated: Vous devez vous connecter ou vous enregistrer pour continuer.
       unconfirmed: Vous devez confirmer votre compte par courriel.
-    mailer:
-      confirmation_instructions:
-        action: Confirmer mon courriel
-        greeting: Bienvenue %{recipient} !
-        instruction: 'Vous pouvez confirmer votre courriel grâce au lien ci-dessous :'
-        subject: Instructions de confirmation
-      email_changed:
-        greeting: Bonjour %{recipient} !
-        message: Nous vous contactons pour vous notifier que votre adresse de courriel a été changée en %{email}.
-        subject: Courriel modifié
-      password_change:
-        greeting: Bonjour %{recipient} !
-        message: Nous vous contactons pour vous notifier que votre mot de passe a été modifié.
-        subject: Mot de passe modifié
-      reset_password_instructions:
-        action: Changer mon mot de passe
-        greeting: Bonjour %{recipient} !
-        instruction: 'Quelqu''un a demandé un lien pour changer votre mot de passe, le voici :'
-        instruction_2: Si vous n'avez pas émis cette demande, merci d'ignorer ce courriel.
-        instruction_3: Votre mot de passe ne changera pas tant que vous n'aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe.
-        subject: Instructions pour changer le mot de passe
-      unlock_instructions:
-        action: Débloquer mon compte
-        greeting: Bonjour %{recipient} !
-        instruction: 'Suivez ce lien pour débloquer votre compte :'
-        message: Votre compte a été bloqué suite à un nombre d'essais de connexions manquées trop important.
-        subject: Instructions pour déverrouiller le compte
-    omniauth_callbacks:
-      failure: 'Nous ne pouvons pas vous authentifier depuis %{kind} pour la raison suivante : ''%{reason}''.'
-      success: Autorisé par votre compte %{kind}.
-    passwords:
-      edit:
-        change_my_password: Changer mon mot de passe
-        change_your_password: Changer votre mot de passe
-        confirm_new_password: Confirmez votre nouveau mot de passe
-        new_password: Nouveau mot de passe
-      new:
-        forgot_your_password: Mot de passe oublié ?
-        send_me_reset_password_instructions: Envoyez-moi des instructions pour réinitialiser mon mot de passe
-      no_token: Vous ne pouvez pas accéder à cette page si vous n’y accédez pas depuis un courriel de réinitialisation de mot de passe. Si vous venez en effet d’un tel courriel, vérifiez que vous avez copié l’adresse URL en entier.
-      send_instructions: Vous allez recevoir sous quelques minutes un courriel vous indiquant comment réinitialiser votre mot de passe.
-      send_paranoid_instructions: Si votre courriel existe dans notre base de données, vous recevrez un lien vous permettant de récupérer votre mot de passe.
-      updated: Votre mot de passe a bien été modifié. Vous êtes maintenant connecté(e).
-      updated_not_active: Votre mot de passe a bien été modifié.
     registrations:
       destroyed: Au revoir ! Votre compte a bien été supprimé. Nous espérons vous revoir bientôt.
       edit:
@@ -196,7 +143,7 @@ fr:
         title: Éditer %{resource}
         unhappy: Pas content ?
         update: Modifier
-        we_need_your_current_password_to_confirm_your_changes: nous avons besoin de votre mot de passe actuel pour valider ces modifications
+        we_need_your_current_password_to_confirm_your_changes: Nous avons besoin de votre mot de passe actuel pour valider ces modifications
       new:
         sign_up: Inscription
       signed_up: Bienvenue ! Vous vous êtes bien enregistré(e).
@@ -221,8 +168,8 @@ fr:
         sign_in_with_provider: Connexion avec %{provider}
         sign_up: Inscription
       minimum_password_length:
-        one: "(%{count} caractère au moins)"
-        other: "(%{count} caractères au moins)"
+        one: (%{count} caractère au moins)
+        other: (%{count} caractères au moins)
     unlocks:
       new:
         resend_unlock_instructions: Renvoyer les instructions de déblocage
@@ -238,7 +185,7 @@ fr:
       not_locked: n’était pas verrouillé(e)
       not_saved:
         one: 'une erreur a empêché ce/cette %{resource} d’être enregistré(e) :'
-        other: "%{count} erreurs ont empêché ce (cet ou cette) %{resource} d’être enregistré(e) :"
+        other: '%{count} erreurs ont empêché ce (cet ou cette) %{resource} d’être enregistré(e) :'
       record_invalid: 'La validation a échoué : %{errors}'
       restrict_dependent_destroy:
         has_one: Vous ne pouvez pas supprimer l'enregistrement car un(e) %{record}
@@ -255,7 +202,6 @@ fr:
       - ven
       - sam
     abbr_month_names:
-      -
       - jan.
       - fév.
       - mar.
@@ -277,10 +223,10 @@ fr:
       - vendredi
       - samedi
     formats:
-      input: "%d/%m/%Y"
-      default: "%d/%m/%Y"
-      long: "%e %B %Y"
-      short: "%e %b"
+      input: '%d/%m/%Y'
+      default: '%d/%m/%Y'
+      long: '%e %B %Y'
+      short: '%e %b'
     month_names:
       - janvier
       - février
@@ -298,186 +244,38 @@ fr:
       - :day
       - :month
       - :year
-    datetime:
-      distance_in_words:
-        about_x_hours:
-          one: environ une heure
-          other: environ %{count} heures
-        about_x_months:
-          one: environ un mois
-          other: environ %{count} mois
-        about_x_years:
-          one: environ un an
-          other: environ %{count} ans
-        almost_x_years:
-          one: presqu'un an
-          other: presque %{count} ans
-        half_a_minute: une demi-minute
-        less_than_x_seconds:
-          zero: moins d'une seconde
-          one: moins d'une seconde
-          other: moins de %{count} secondes
-        less_than_x_minutes:
-          zero: moins d'une minute
-          one: moins d'une minute
-          other: moins de %{count} minutes
-        over_x_years:
-          one: plus d'un an
-          other: plus de %{count} ans
-        x_seconds:
-          one: 1 seconde
-          other: "%{count} secondes"
-        x_minutes:
-          one: 1 minute
-          other: "%{count} minutes"
-        x_days:
-          one: 1 jour
-          other: "%{count} jours"
-        x_months:
-          one: 1 mois
-          other: "%{count} mois"
-        x_years:
-          one: 1 an
-          other: "%{count} ans"
-      prompts:
-        second: Seconde
-        minute: Minute
-        hour: Heure
-        day: Jour
-        month: Mois
-        year: Année
-    errors:
-      format: "%{attribute} %{message}"
-      messages:
-        accepted: doit être accepté(e)
-        blank: doit être rempli(e)
-        confirmation: ne concorde pas avec %{attribute}
-        empty: doit être rempli(e)
-        equal_to: doit être égal à %{count}
-        even: doit être pair
-        exclusion: n'est pas disponible
-        greater_than: doit être supérieur à %{count}
-        greater_than_or_equal_to: doit être supérieur ou égal à %{count}
-        inclusion: n'est pas inclus(e) dans la liste
-        invalid: n'est pas valide
-        less_than: doit être inférieur à %{count}
-        less_than_or_equal_to: doit être inférieur ou égal à %{count}
-        model_invalid: 'Validation échouée : %{errors}'
-        not_a_number: n'est pas un nombre
-        not_an_integer: doit être un nombre entier
-        odd: doit être impair
-        other_than: doit être différent de %{count}
-        present: doit être vide
-        required: doit exister
-        taken: n'est pas disponible
-        too_long:
-          one: est trop long (pas plus d'un caractère)
-          other: est trop long (pas plus de %{count} caractères)
-        too_short:
-          one: est trop court (au moins un caractère)
-          other: est trop court (au moins %{count} caractères)
-        wrong_length:
-          one: ne fait pas la bonne longueur (doit comporter un seul caractère)
-          other: ne fait pas la bonne longueur (doit comporter %{count} caractères)
-      template:
-        body: 'Veuillez vérifier les champs suivants : '
-        header:
-          one: 'Impossible d''enregistrer ce(tte) %{model} : 1 erreur'
-          other: 'Impossible d''enregistrer ce(tte) %{model} : %{count} erreurs'
-    helpers:
-      select:
-        prompt: Veuillez sélectionner
-      submit:
-        create: Créer un(e) %{model}
-        submit: Enregistrer ce(tte) %{model}
-        update: Modifier ce(tte) %{model}
-    number:
-      currency:
-        format:
-          delimiter: " "
-          format: "%n %u"
-          precision: 2
-          separator: ","
-          significant: false
-          strip_insignificant_zeros: false
-          unit: "€"
-      format:
-        delimiter: " "
-        precision: 3
-        separator: ","
-        significant: false
-        strip_insignificant_zeros: false
-      human:
-        decimal_units:
-          format: "%n %u"
-          units:
-            billion: milliard
-            million: million
-            quadrillion: million de milliards
-            thousand: millier
-            trillion: billion
-            unit: ''
-        format:
-          delimiter: ''
-          precision: 3
-          significant: true
-          strip_insignificant_zeros: true
-        storage_units:
-          format: "%n %u"
-          units:
-            byte:
-              one: octet
-              other: octets
-            eb: Eo
-            gb: Go
-            kb: ko
-            mb: Mo
-            pb: Po
-            tb: To
-      percentage:
-        format:
-          delimiter: ''
-          format: "%n%"
-      precision:
-        format:
-          delimiter: ''
-    support:
-      array:
-        last_word_connector: " et "
-        two_words_connector: " et "
-        words_connector: ", "
   time:
     am: am
     formats:
-      default: "%d %B %Y %Hh %Mmin %Ss"
-      long: "%A %d %B %Y %Hh%M"
-      short: "%d %b %Hh%M"
+      default: '%d %B %Y %Hh %Mmin %Ss'
+      long: '%A %d %B %Y %Hh%M'
+      short: '%d %b %Hh%M'
   pm: pm
-  confirm_delete: "Supprimer cet élément ?"
-  Description: "Description"
-  none: "aucun"
-  wares_to_invoice: "Marchandises à facturer"
-  projects_done: "Projets terminés"
-  extras: "Divers"
-  extra: "Divers"
-  unit: "Unité"
-  quantity: "Quantité"
-  extra_price: "Prix/Unité"
-  editing_extra: "Modification divers"
-  creating_extra: "Création divers"
-  creating_wares: "Création marchandise"
-  editing_invoice: "Edition facture"
-  creating_invoice: "Création facture"
-  editing_customers: "Edition client"
-  creating_customers: "Création client"
-  editing_wares: "Edition marchandise"
-  editing_services: "Edition prestation"
-  creating_services: "Création prestation"
-  editing_quotation: "Edition devis"
-  creating_quotation: "Création devis"
-  editing_project: "Edition projet"
-  creating_project: "Création projet"
-  logout: "Déconnexion"
-  locale_changed: "Langue changée avec succès"
-  FR: "FR"
-  EN: "EN"
+  confirm_delete: Supprimer cet élément ?
+  Description: Description
+  none: aucun
+  wares_to_invoice: Marchandises à facturer
+  projects_done: Projets terminés
+  extras: Divers
+  extra: Divers
+  unit: Unité
+  quantity: Quantité
+  extra_price: Prix/Unité
+  editing_extra: Modification divers
+  creating_extra: Création divers
+  creating_wares: Création marchandise
+  editing_invoice: Edition facture
+  creating_invoice: Création facture
+  editing_customers: Edition client
+  creating_customers: Création client
+  editing_wares: Edition marchandise
+  editing_services: Edition prestation
+  creating_services: Création prestation
+  editing_quotation: Edition devis
+  creating_quotation: Création devis
+  editing_project: Edition projet
+  creating_project: Création projet
+  logout: Déconnexion
+  locale_changed: Langue changée avec succès
+  FR: FR
+  EN: EN
