revamp projects, new add buttons, project sub totals, colored locale titles

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -279,3 +279,8 @@ fr:
   locale_changed: Langue changée avec succès
   FR: FR
   EN: EN
+  customer_name: "Nom client"
+  TOTALS: "TOTAUX"
+  total: "Total TTC"
+  back: "Retour"
+  back_to_projects: "Retour aux projets"
