--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,5 @@
 fr:
+  wares:
   id_locale: ID
   date_locale: Date
 
@@ -85,6 +86,20 @@ fr:
     previous_label: Précedent
     next_label: Suivant
     page_gap: '&hellip;'
+  attributes:
+    status_list:
+      in_progress: "En réalisation"
+      done: "Terminé"
+      invoiced: "Facturé"
+      paid: "Payé"
+      created: "Créé"
+      paid_fem: "Payée"
+      assigned: "Attribué"
+      not_assigned: "Non-attribué"
+      assigned_customer: "Attribué (client)"
+      assigned_project: "Attribué (projet)"
+      quotation: "Devis"
+      accepted: "Accepté"
   activerecord:
     attributes:
       user:
@@ -111,6 +126,8 @@ fr:
         unconfirmed_email: Courriel non confirmé
         unlock_token: Clé de déverrouillage
         updated_at: Date de mise à jour
+      ware:
+
     models:
       user: Utilisateur
     errors:
@@ -289,3 +306,25 @@ fr:
   editing_extra_line: "Edition divers"
   creating_extra_line: "Ajout divers"
   invoice_number: "Num. Facture"
+  in_progress: "En réalisation"
+  done: "Terminé"
+  invoiced: "Facturé"
+  paid: "Payé"
+  created: "Créé"
+  paid_fem: "Payée"
+  assigned: "Attribué"
+  not_assigned: "Non-attribué"
+  assigned_customer: "Attribué (client)"
+  assigned_project: "Attribué (projet)"
+  accepted: "Accepté"
+  phone_number: "Téléphone"
+  invoice_project: "Facturer"
+  do_done: "Terminer"
+  unauthorized_action: "Action non autorisée"
+  payment: "Paiement"
+  payment_reference: "Référence de paiement"
+  editing_payment: "Edition paiement"
+  creating_payment: "Création paiement"
+  unpayed_invoice: "Factures impayée"
+  category: "Catégorie"
+  extra_name: "Dénomination"
